@@ -5,6 +5,7 @@ New features:
 A.F....... [ZBX-1357] updated Italian translation; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-7808] fixed latest data columns width proportions (Eduard)
 ........S. [ZBX-7817] fixed SQL errors while linking applications to a host (Sasha)
 ..F....... [ZBX-7754] fixed possibility to add a trigger expression with log function selected and improved error messaging in trigger expression pop-up (Ivo)
 ..F....... [ZBX-7768] fixed item valuemap import (Eduard)
